use immutable list/set/map factory methods