@@ -5,7 +5,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
 import com.fasterxml.jackson.databind.node.ObjectNode;
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import io.helidon.webclient.http1.Http1ClientResponse;
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
@@ -29,7 +29,7 @@ public class BucketListControllerHttpPostTest extends BucketListControllerTestSu
 		String description = "just testing";
 		when(auth.current(any())).thenReturn(new Authorization(user.asIdentity()));
 		when(dispatcher.dispatch(arg.capture())).thenReturn(commandId);
-		try (Http1ClientResponse result = call(new CreateBucketForm(label, description, ImmutableList.of()).toJson())) {
+		try (Http1ClientResponse result = call(new CreateBucketForm(label, description, List.of()).toJson())) {
 			assertThat(result).hasStatus(201).hasHeader(COMMAND_ID, commandId);
 			Bucket bucket = arg.getValue().getBucket();
 			assertThat(result).hasContent(bucket.toJson());
@@ -51,7 +51,7 @@ public class BucketListControllerHttpPostTest extends BucketListControllerTestSu
 		when(auth.current(any())).thenReturn(new Authorization(user.asIdentity()));
 		when(dispatcher.dispatch(arg.capture())).thenReturn(commandId);
 		when(buckets.find(alias.getId())).thenReturn(alias);
-		try (Http1ClientResponse result = call(new CreateBucketForm(label, null, ImmutableList.of(new Alias(alias.getId()))).toJson())) {
+		try (Http1ClientResponse result = call(new CreateBucketForm(label, null, List.of(new Alias(alias.getId()))).toJson())) {
 			assertThat(result).hasStatus(201).hasHeader(COMMAND_ID, commandId);
 			Bucket bucket = arg.getValue().getBucket();
 			assertThat(result).hasContent(bucket.toJson());
@@ -70,7 +70,7 @@ public class BucketListControllerHttpPostTest extends BucketListControllerTestSu
 		alias.addRole(new Identity(), Role.OWNER);
 		when(auth.current(any())).thenReturn(new Authorization(user.asIdentity()));
 		when(buckets.find(alias.getId())).thenReturn(alias);
-		try (Http1ClientResponse result = call(new CreateBucketForm(label, null, ImmutableList.of(new Alias(alias.getId()))).toJson())) {
+		try (Http1ClientResponse result = call(new CreateBucketForm(label, null, List.of(new Alias(alias.getId()))).toJson())) {
 			assertThat(result).hasStatus(400);
 		}
 	}
@@ -103,7 +103,7 @@ public class BucketListControllerHttpPostTest extends BucketListControllerTestSu
 		when(auth.current(any())).thenReturn(new Authorization(user.asIdentity()));
 		when(dispatcher.dispatch(arg.capture())).thenReturn(commandId);
 		when(buckets.find(alias.getId())).thenReturn(alias);
-		try (Http1ClientResponse result = call(new CreateBucketForm(label, null, ImmutableList.of(new Alias(alias.getId()))).toJson())) {
+		try (Http1ClientResponse result = call(new CreateBucketForm(label, null, List.of(new Alias(alias.getId()))).toJson())) {
 			assertThat(result).hasStatus(400);
 			verifyNoInteractions(dispatcher);
 		}
@@ -118,7 +118,7 @@ public class BucketListControllerHttpPostTest extends BucketListControllerTestSu
 		when(auth.current(any())).thenReturn(new Authorization(user.asIdentity()));
 		when(dispatcher.dispatch(arg.capture())).thenReturn(commandId);
 		when(buckets.find(alias.getId())).thenReturn(null);
-		try (Http1ClientResponse result = call(new CreateBucketForm(label, null, ImmutableList.of(new Alias(alias.getId()))).toJson())) {
+		try (Http1ClientResponse result = call(new CreateBucketForm(label, null, List.of(new Alias(alias.getId()))).toJson())) {
 			assertThat(result).hasStatus(400);
 			verifyNoInteractions(dispatcher);
 		}
