@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.Map;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.Test;
 
 import com.zenobase.models.Identity;
@@ -12,7 +11,7 @@ import com.zenobase.models.Role;
 
 public class RolesFieldTest extends FieldTestSupport<Map.Entry<Identity, Role>> {
 
-	private final Map<Identity, Role> map = ImmutableMap.of(
+	private final Map<Identity, Role> map = Map.of(
 		new Identity(), Role.OWNER,
 		new Identity(), Role.CONTRIBUTOR);
 
